--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,7 +103,7 @@ margin-left: -15px;
 }
 
 .modal-header {
-	background: #3498db;
+	background: chocolate;
 }
 
 .modal-header h4 {
@@ -132,6 +132,10 @@ border: 0px solid transparent;
 	color: white;
 }
 
+a:hover{
+  border: none!important;
+  cursor: pointer;
+}
 
 
 hr {
@@ -248,12 +252,7 @@ a {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-a:hover,
-a:focus {
-    color: #c0392b;
-    text-decoration: none;
-    outline: 0;
-}
+
 
 a:before,
 a:after {
@@ -271,10 +270,10 @@ a:after {
     }
 .form-area
 {
-    background-color: #FAFAFA;
-  padding: 10px 40px 60px;
-  margin: 10px 0px 60px;
-  border: 1px solid GREY;
+  background-color: #FAFAFA;
+  padding: 0px 10px 0px;
+  margin: 0px 0px 45px;
+  /* border: 1px solid GREY; */
   }
 
 .crop {
@@ -358,11 +357,7 @@ a:after {
     background-size: cover;
 }
 
-#video1
- {
-  width: 100%;
- min-height: 100%;
- }
+
 
  .header_overlay {
   position: absolute;
@@ -824,7 +819,7 @@ a:after {
   width: 100%;
   height: 61px;
   background: url(../img/footer-graph.png) no-repeat 120px top;
-  background-color: #eee;
+  
 }
 
 .footer1 {
@@ -908,4 +903,8 @@ a:after {
 		line-height: 38px;
 	}
 }
+
+#video1 { min-width: 100%; 
+  max-width: 100%;
+  height: auto  }
 
